--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "overtrue/laravel-favorite": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
